# MathEngine

./: .gitignore  CMakeLists.txt  MathLib.cpp  camera.cpp  main.cpp  skyboxvertices.h
Assets/: triangle.fs  triangle.vs  triangleF.shader  triangleV.shader
Assets/Shaders/: basicPlanetF.shader  basicPlanetV.shader  earthF.shader  earthV.shader  skyBoxF.shader  skyBoxV.shader  sunF.shader  sunV.shader  triangleF.shader  triangleV.shader
MathLib/: MathLib.cpp
